--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,5 +1,13 @@
 /* this is my style sheet */
 
 * {
-font-family: Arial, Helvetica, sans serif;
+    font-family: Verdana, Helvetica, sans-serif;
+    color:#3d2966;
+    font-size: 20px;
+    background-color:#d6c2ff;
+}
+
+h1 {
+    font-weight: bold;
+    font-size: 24px;
 }
