--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,13 +1,33 @@
 /* this is my style sheet */
 
 * {
-    font-family: Verdana, Helvetica, sans-serif;
-    color:#3d2966;
-    font-size: 20px;
-    background-color:#d6c2ff;
+    font-family: Verdana, Helvetica, sans-serif;    
 }
-
-h1 {
-    font-weight: bold;
-    font-size: 24px;
+#wrapper {
+    width: 500px;
+    /* center layout element:top,right, bottom, left*/
+    margin: 10px auto 10px auto;
+    height: 500px;
+    background:#dddddd;
 }
+header {
+    width: 100%;
+    height: 50px;
+    background:#bbbbbb;
+    text-align: center;
+}
+.article-head {
+    background: #ffffff;
+}
+nav, aside {
+    background:#bbbbbb;
+    width: 100px;
+    float: left;
+}
+article {
+    /*border: 1px solid #000000;*/
+    background: #ffffff;
+    width: 300px;
+    float: left;
+}
+#page-footer {clear:left; background:#bbbbbb;
