--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,8 +1,11 @@
 /* this is my style sheet */
 
 * {
-    font-family: Verdana, Helvetica, sans-serif;    
+    font-family: Verdana, Helvetica, sans-serif; 
+    margin: 0;padding: 0; 
+    
 }
+
 #wrapper {
     width: 100%;
     /* center layout element:top,right, bottom, left*/
