--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -2,16 +2,16 @@
 
 * {
     font-family: Verdana, Helvetica, sans-serif; 
-    margin: 0;padding: 0; 
+    margin: 0; padding: 0; 
     
 }
 
 #wrapper {
-    width: 100%;
+    width: 960px;
     /* center layout element:top,right, bottom, left*/
     margin: 10px auto 10px auto;
-    height: 500px;
-    background:#dddddd;
+    height: 900px;
+    background:#ddddee;
 }
 header {
     width: 90%;
@@ -36,4 +36,20 @@ article {
 #page-footer {
     clear:left; 
     background:#bbbbbb;
+}
+
+a {
+    display:block;
+}
+
+a:link {
+    background: #ccdded;
+}
+
+a:visited {
+    background: #bccdcb;
+}
+
+a:hover, a:active {
+    background: #cddedc;
 }
