--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -1,5 +1,7 @@
 /* this is my style sheet */
 
+/*
+
 * {
     font-family: Verdana, Helvetica, sans-serif; 
     margin: 0; padding: 0; 
@@ -53,3 +55,5 @@ a:visited {
 a:hover, a:active {
     background: #cddedc;
 }
+
+*/
