--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -2,11 +2,11 @@
 
 * {
     font-family: Verdana, Helvetica, sans-serif; 
-    margin: 0; padding: 0; 
+    color: #555555;
     
 }
 
-#wrapper {
+.container {
 
     background:#ddddee;
 }
@@ -18,10 +18,8 @@ header {
 .article-head {
     background: #ffffff;
 }
-nav, aside {
+nav {
     background:#bbbbbb;
-    width: 25%;
-    float: left;
 }
 article {
     border: 1px solid #000000;
