--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -2,24 +2,24 @@
 
 * {
     font-family: Verdana, Helvetica, sans-serif; 
-    color: #555555;
+    color: #42434c;
     
 }
 
 .container {
 
-    background:#ddddee;
+    background:#d7daf7;
 }
 header {
 
-    background:#bbbbbb;
+    background:#858799;
     text-align: center;
 }
 .article-head {
-    background: #ffffff;
+    background: #858799;
 }
-nav {
-    background:#bbbbbb;
+li {
+    background:#858799;
 }
 article {
     border: 1px solid #000000;
@@ -27,7 +27,7 @@ article {
 }
 #page-footer {
   
-    background:#bbbbbb;
+    background:#858799;
     border-top:2px solid #888888;
 }
 
@@ -36,14 +36,14 @@ a {
 }
 
 a:link {
-    background: #ccdded;
+    background: #7a7c8c;
 }
 
 a:visited {
-    background: #bccdcb;
+    background: #7a7c8c;
 }
 
 a:hover, a:active {
-    background: #cddedc;
+    background: #d98838;
 }
 
