--- a/styles/mystyle.css
+++ b/styles/mystyle.css
@@ -13,11 +13,7 @@ body {
 header {
 
     background:#c5c7c6;
-    text-align: center;
-}
-
-li {
-    background:#c5c7c6;
+    text-align: left;
 }
 
 section {
